--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,4 +2,90 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+    background-color: #FFFFFF;
+}
+li{
+    list-style: none;
+    text-decoration: none;
+}
+ul li a{
+ text-decoration: none;
+}
+.active{
+    color: aquamarine;
+}
+.box{
+    transition: all 0.3s ease-in-out;
+    box-shadow: 4px 3px 3px 0 rgb(155 153 153 / 43%);
+}
+.box:hover{
+    box-shadow: none
+}
 
+.scrollDown::before,
+.scrollDown::after{
+    content: '';
+    position: absolute;
+    top:20%;
+    left:40%;
+    border:2px solid black;
+    height: 10px;
+    width: 10px;
+    transform: translate(-30%, -100%) rotate(40deg);
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1s ease-in-out infinite;
+}
+.scrollDown::after{
+    top:30%;
+    animation-delay: 0.3s;
+}
+@keyframes scroll-down{
+    0%{
+        opacity: 0;
+    }
+    30%{
+        opacity: 1;
+    }
+    60%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        top: 90%;
+    }
+}
+
+/* works style  */
+.works .worksBox{
+    width: 100%;
+    height: 250px;
+    background: #000;
+     transition: ease-in-out 8s;
+     background-position: top;
+} 
+.works .worksBox:hover{
+     background-position: bottom;  
+} 
+
+.works .worksBox.worksBox1{
+  background: url(../../../portfolio//src/asserts/works/job-linker.png);
+  background-size: cover;
+}
+.works .worksBox.worksBox2{
+   background: url(../../../portfolio//src/asserts/works/toy-sports-car.png);
+   background-size: cover;
+}
+.works .worksBox3{
+   background: url(../../../portfolio//src/asserts/works/carenowhospitals.png);
+   background-size: cover;
+}
+.works .box:hover{
+    background-position: bottom;
+    cursor: pointer; 
+} 
+.works .worksBox:hover{
+    background-position: bottom;
+    cursor: pointer;
+}
