--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar{
+    width: 15px;
+}
+::-webkit-scrollbar-track{
+    background-color: #000000;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #64ffda;
+    border: 5px solid transparent;
+    border-radius: 10px;
+    background-clip: content-box;
+} 
+
 body{
     background-color: #FFFFFF;
 }
@@ -23,6 +36,7 @@ ul li a{
     box-shadow: none
 }
 
+/* banner  */
 .scrollDown::before,
 .scrollDown::after{
     content: '';
